syntax = "proto2";

package throwie;

message CSIMessage {
    required int64 timestamp = 1 [default = 0];
    required bytes src_mac = 2 [default = "DEADBEEEEEFF"];
    required sint32 sequence_identifier = 3 [default = 0];
    required uint32 antenna = 4 [default = 0];
    required sint32 rssi = 5 [default = 0];
    required sint32 noise_floor = 6 [default = 0];
    required uint32 csi_crc32 = 7 [default = 0];
    required bytes csi_data = 8;
}